# cpp-mpi-training

./: CMakeLists.txt  cluster_kohonen.cpp  cluster_kohonen.h  common.cpp  common.h  data.csv  get_sd_index.cpp  get_sd_index.h  main.cpp  readme.md  types.h
